@@ -1,5 +1,6 @@
 package com.project.task_manager.services.contributor;
 
+import com.project.task_manager.dto.PagedResponseDto;
 import com.project.task_manager.dto.TaskDto;
 import com.project.task_manager.entities.Task;
 import com.project.task_manager.entities.User;
@@ -7,6 +8,9 @@ import com.project.task_manager.repositories.TaskRepository;
 import com.project.task_manager.utils.JwtUtil;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
@@ -24,13 +28,18 @@ public class ContributorServiceImpl implements ContributorService {
     private final JwtUtil jwtUtil;
 
     @Override
-    public List<TaskDto> getTasksByUserId() {
+    public PagedResponseDto getTasksByUserId(int pageNumber, int pageSize) {
         User user = jwtUtil.getLoggedInUser();
-        if (user != null) {
-            return taskRepository.findAllByUser_id(user.getId()).stream()
-                    .sorted(Comparator.comparing(Task::getDueDate).reversed())
+        Pageable pageable = PageRequest.of(pageNumber, pageSize);
+        if(user != null) {
+            Page<?> page =  taskRepository.findAllByUser_id(user.getId(), pageable);
+            int totalPages = page.getTotalPages();
+            long totalElements = page.getTotalElements();
+            List<Task> taskList = (List<Task>) page.getContent();
+            List<TaskDto> taskDtoList = taskList.stream().sorted(Comparator.comparing(Task::getDueDate).reversed())
                     .map(Task::getTaskDto)
-                    .collect(Collectors.toList());
+                    .toList();
+            return new PagedResponseDto(totalElements, totalPages, taskDtoList);
         }
         throw new EntityNotFoundException("User not found");
     }
